# cram_seds

./: README.md
cds_control_nodes/: CMakeLists.txt  manifest.xml
cds_control_nodes/include/seds_control_nodes/: cds_arm_controller.hpp  cds_cartesian_wrapper.hpp  cds_wrapper.hpp  msg_conversions.hpp
cds_control_nodes/launch/: cartesian_reaching_motion_controller.launch  cartesian_spatula_controller.launch  cartesian_spatula_simulator.launch  cds_pancake_demo.launch  cds_spatula_test.launch
cds_control_nodes/scripts/: baker_model.py  oven_model.py  pancake_model.py  spatula_model_bremen_1.py  spatula_model_epfl.py  table_model.py
cds_control_nodes/src/: arm_kinematics.cpp  cds_arm_controller.cpp  cds_cartesian_test_node.cpp  cds_cartesian_wrapper.cpp  cds_control_node.cpp  cds_wrapper.cpp  kdl_epfl_conversions.cpp
cds_control_nodes/test/: arm_kinematics.cpp  cds_cartesian_wrapper.cpp  cds_wrapper.cpp  kdl_epfl_conversions.cpp
cds_control_nodes/test_data/: boxy_fixed_torso_description.urdf  masterGMM.txt
cram_seds/: cram-seds.asd  manifest.xml
cram_seds/asdf/: cram-seds.asd
cram_seds/src/: conversions.lisp  knowrob-utils.lisp  package.lisp  sample-knowrob-symbols.lisp  seds-representation.lisp
knowrob_seds/: .gitignore  CMakeLists.txt  manifest.xml
knowrob_seds/launch/: knowrob_seds.launch
knowrob_seds/owl/: dummy-task.owl  dummy-task.owl.in  knowrob-seds.owl.in
knowrob_seds/prolog/: init.pl.in  (+1 more)
seds_control_nodes/: CMakeLists.txt  mainpage.dox  manifest.xml  seds_control_nodes.files
seds_learning_data/: mainpage.dox  manifest.xml
(+26 files in other folders)
